@@ -75,7 +75,8 @@ MovieJukebox 1.0.17 beta
   - Enhancement  #796 Update to the Hebrew skin
   - Fixed defect #820 Proper handling of TV shows by Kinopoisk plugin
   - Fixed defect #821 Specify UTF-8 encoding in header of main index.htm
-  - Enhancement  #823 Index all English chars in single AZ category
+  - Enhancement  #823 Index all English chars in single A-Z category
+  - Fixed defect #824 BluRay disks Source is marked as DVD
 
 MovieJukebox 1.0.16 beta
 ------------------------
